--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -12,6 +13,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.application.properties
 
 ### IntelliJ IDEA ###
 .idea
@@ -26,6 +28,7 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
+
 
 ### VS Code ###
 .vscode/
