--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.password=Academy19!
 
 spring.jpa.hibernate.ddl-auto=update
 
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=670e3cf2c95443
+spring.mail.password=a8d13e94d0e441
+
+
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
