Repo für Preiseingaben bauen (ungoing)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/blabla
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=FeWe1307#?
+spring.datasource.password=moin1234
 
 spring.jpa.hibernate.ddl-auto=update
 
