--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/fluessiggaswebcrawler
+spring.datasource.url=jdbc:mariadb://localhost:3306/blabla
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Academy19!
+spring.datasource.password=FeWe1307#?
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 spring.mail.host=smtp.mailtrap.io
