--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=FeWe1307#?
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=670e3cf2c95443
-spring.mail.password=a8d13e94d0e441
+spring.mail.username=891841fb6ada32
+spring.mail.password=4d8664ae8a1266
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
