Email Benachrichtigungsklasse und zwei Methoden erstellt. Emailbenachrichtigung nach Anfrage und nach Exception! plus application properties in gitignore.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/blabla
+spring.datasource.url=jdbc:mariadb://localhost:3306/fluessiggaswebcrawler
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=moin1234
+spring.datasource.password=Academy19!
 
 spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=891841fb6ada32
-spring.mail.password=4d8664ae8a1266
+spring.mail.username=670e3cf2c95443
+spring.mail.password=a8d13e94d0e441
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
